--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -53,6 +53,7 @@ body {
 	background: hsl(var(--background));
 	color: hsl(var(--foreground));
 	font-family: Arial, Helvetica, sans-serif;
+	overscroll-behavior: none;
 }
 
 /* Ajout des styles spécifiques à Heroui */
