--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -11,7 +11,7 @@
 	--foreground: 223 76% 15%;
 	--primary: 220 100% 55%; /* Bleu intense */
 	--primary-foreground: 0 0% 100%;
-	--secondary: 210 100% 80%; /* Bleu pastel */
+	--secondary: 220 56% 32%%; /* Bleu pastel */
 	--secondary-foreground: 0 0% 0%;
 	--destructive: 0 72% 50%;
 	--destructive-foreground: 0 0% 100%;
@@ -25,7 +25,6 @@
 	--card-foreground: 0 0% 0%;
 	--radius: 0.5rem;
 }
-
 /* Support du mode sombre */
 .dark {
 	/* Bordures et contrôles */
